@@ -95,6 +95,8 @@ Release 0.3.0 (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-197. Data generator for e2e assumes hadoop tarball installation (arpitgupta via khorgath)
+
   HCAT-199. HCatOutputCommitter::cleanupJob() fails : Unable to connect to metastore. (mithun via khorgath)
 
   HCAT-202. ant clean target is failing (thw via toffer)
